standard_modules/EC2-module/security-grps.tf
#create security group - SSH
resource "aws_security_group" "vpc-ssh" {
  name = "vpc-ssh"
  ingress {
      description = "Allow Port 22"
      from_port = 22
      to_port = 22
      protocol = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
  }
   egress {
       description = "All all ip and ports outbound"
       from_port = 0
       to_port = 0
       protocol = "-1"
       cidr_blocks = ["0.0.0.0/0"]
   }
}

#create security group - web traffic
resource "aws_security_group" "vpc-web" {
    name = "vpc-web"
    ingress {
        description = "Allow port 80"
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    ingress {
        description = "Allow port 443"
        from_port = 443
        to_port = 443
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    egress{
        description = "Allow any port IP and ports outbound"
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
  
}
